--- a/package.json
+++ b/package.json
@@ -3,25 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "@ethsign/sp-sdk": "^0.10.3",
+    "@tanstack/react-query": "^5.66.3",
+    "@web3modal/wagmi": "^4.0.5",
+    "country-state-city": "^3.2.1",
+    "leaflet": "^1.9.4",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
+    "viem": "^2.7.9",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
